--- a/bower.json
+++ b/bower.json
@@ -10,7 +10,8 @@
     "angular-cookies": "~1.2.0",
     "angular-sanitize": "~1.2.0",
     "angular-route": "~1.2.0",
-    "bootstrap": "~3.0.3"
+    "bootstrap": "~3.0.3",
+    "angular-bootstrap": "~0.10.0"
   },
   "devDependencies": {
     "angular-mocks": "~1.2.0",
